@startuml

title __EXERCISE12's Class Diagram__\n

  package week02.exercise12 {
    class Driver {
        - name : String
        - startingNumber : int
        - driverText : String
        ~ Driver()
        + getName()
        + getStartingNumber()
        + toString()
    }
  }
  

  package week02.exercise12 {
    class Motorcycle {
        - horn : boolean
        - hornAsText()
        ~ Motorcycle()
        + toString()
    }
  }
  

  package week02.exercise12 {
    class RacingGame {
        + RacingGame()
        {static} + main()
    }
  }
  

  package week02.exercise12 {
    class Tank {
        - ammunition : int
        + getAmmunition()
        ~ Tank()
        + toString()
    }
  }
  

  package week02.exercise12 {
    class Trike {
        - color : String
        ~ Trike()
        + toString()
        {static} + main()
    }
  }
  

  package week02.exercise12 {
    class Vehicle {
        # manufacturer : String
        # name : String
        # horsepower : int
        ~ Vehicle()
        + getManufacturer()
        + getName()
        + getHorsepower()
        + getEngineType()
        + toString()
        {static} + main()
    }
  }
  

  package week02.exercise12 {
    enum EngineType {
      electric
      diesel
      gasoline
    }
  }
  

  Motorcycle -up-|> Vehicle
  Tank -up-|> Vehicle
  Trike -up-|> Vehicle
  Vehicle o-- EngineType : engineType
  Vehicle +-down- EngineType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
